# stack-docker-playground

./: LICENSE  README.md  TAGS  report.cabal  stack.yaml
src/: Main.hs
