name:                report
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/klrkdekira/report#readme
license:             BSD3
license-file:        LICENSE
author:              Chee Leong
maintainer:          klrkdekira@gmail.com
copyright:           Copyright: (c) 2017 Chee Leong
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable report
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       options,
                       wreq